Video rendered wrong for uncompressed AVI (FOURCC "DIB ") when image width NOT a multiple of 4 bytes
DIB images are supposed to be stored such that each row starts on a 4 byte boundary. This implies that when the image width is not a multiple of 4 bytes, padding exists at the end of each row to align the next row on a 4 byte boundary.
VLC 2.0.0 appears to ignore that padding and try to include the data in the image, causing the image to shift a few bytes with each row and not render properly.
Windows media player 10 (windows XP 64 bit) and 11 (windows 7 64 bit) both play the file fine.
ffplay on ubuntu linux plays the file fine.
VLC 2.0.0 testing on windows7 and VLC 1.1.4 on ubuntu linux shows the video incorrectly.