demux: avi: align reads for uncompressed bmp (fix #6387, #4518, #9552)